--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -882,7 +882,7 @@
     <string name="text_cant_play">发生错误,请稍后再试。</string>
     <string name="text_bet_not_success">滚球投注注单状态&#160;</string>
     <string name="text_bet_not_success3">&#160;您的注单正在处理中请检查您的&#160;</string>
-    <string name="text_security_money">押金：%s</string>
+    <string name="text_security_money">存款押金：%s</string>
     <string name="text_security_money2">还有%s天</string>
     <string name="customer_service_title">客服中心</string>
 
