--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -26,20 +26,20 @@
     <string name="version_name">phiên bản</string>
     <string name="btn_pass">bỏ qua</string>
     <string name="login_account">Đăng nhập tài khoản</string>
-    <string name="please_input_account">(Vui lòng nhập tài khoản hội viên của bạn)</string>
+    <string name="please_input_account">Vui lòng nhập tài khoản hội viên của bạn)</string>
     <string name="login_password">Đăng nhập mật khẩu</string>
     <string name="remember_password">Nhớ mật khẩu</string>
     <string name="forget_password_question">Quên mật khẩu?</string>
     <string name="desc_forget_password">vui lòng liên hệ chăm sóc khách hàng</string>
     <string name="sign_up_know">Đăng ký ngay</string>
     <string name="recommend_code">Mã giới thiệu</string>
-    <string name="hint_recommend_code">(Vui lòng nhập Mã giới thiệu)</string>
+    <string name="hint_recommend_code">Vui lòng nhập Mã giới thiệu)</string>
     <string name="error_recommend_code">Not available the outlet, please confirm</string>
     <string name="member_account">Đăng nhập tài khoản</string>
-    <string name="hint_member_account">(Độ dài từ 4-16 ký tự bao gồm cả chữ và số)</string>
+    <string name="hint_member_account">Độ dài từ 4-16 ký tự bao gồm cả chữ và số)</string>
     <string name="error_member_account">Tài khoản từ 4-16 ký tự bao gồm chữ và số</string>
     <string name="error_register_id_exist">Tên tài khoản đã tồn tại</string>
-    <string name="hint_register_password">(Độ dài từ 4-16 ký tự bao gồm chữ cái và số)</string>
+    <string name="hint_register_password">Độ dài từ 4-16 ký tự bao gồm chữ cái và số)</string>
     <string name="error_register_password">Mật khẩu từ 4-16 ký tự bao gồm chữ và số</string>
     <string name="error_password_format">Mật khẩu cần phải chữ và số</string>
     <string name="register_please_read">Hãy đọc kỹ</string>
@@ -57,55 +57,55 @@
     <string name="register_jump">Trang sẽ chuyển sang %s 5 giây sau đó.</string>
     <string name="register_recharge_now">Gửi tiền ngay bây giờ</string>
     <string name="confirm_password">Xác nhận mật khẩu</string>
-    <string name="hint_confirm_password">(Vui lòng nhập lại mật khẩu)</string>
+    <string name="hint_confirm_password">Vui lòng nhập lại mật khẩu)</string>
     <string name="error_confirm_password">Mật khẩu đăng nhập 2 lần không đồng nhất</string>
     <string name="withdrawal_pwd">Mật khẩu rút tiền</string>
-    <string name="hint_withdrawal_pwd">(Mật khẩu gồm 4 chữ số)</string>
+    <string name="hint_withdrawal_pwd">Mật khẩu gồm 4 chữ số)</string>
     <string name="phone_number">Số điện thoại</string>
-    <string name="hint_phone_number">(Vui lòng nhập số điện thoại)</string>
+    <string name="hint_phone_number">Vui lòng nhập số điện thoại)</string>
     <string name="error_phone_number">lỗi định dạng số điện thoại không hợp lệ</string>
     <string name="qq_number">QQsố</string>
-    <string name="hint_qq_number">(Vui lòng nhập QQTài khoản)</string>
+    <string name="hint_qq_number">Vui lòng nhập QQTài khoản)</string>
     <string name="error_qq_number">Lỗi định dạng tài khoản QQ</string>
     <string name="e_mail">Email</string>
-    <string name="hint_e_mail">(Vui lòng nhập email)</string>
+    <string name="hint_e_mail">Vui lòng nhập email)</string>
     <string name="error_e_mail">Lỗi định dạng email không đúng</string>
     <string name="postal_code">Mã bưu điện</string>
-    <string name="hint_postal_code">(Vui lòng nhập mã ZIP)</string>
+    <string name="hint_postal_code">Vui lòng nhập mã ZIP)</string>
     <string name="province">Tỉnh</string>
-    <string name="hint_province">(Vui lòng nhập tỉnh)</string>
+    <string name="hint_province">Vui lòng nhập tỉnh)</string>
     <string name="city">Thành phố</string>
-    <string name="hint_city">(Vui lòng nhập thành phố)</string>
+    <string name="hint_city">Vui lòng nhập thành phố)</string>
     <string name="we_chat">Wechat</string>
-    <string name="hint_we_chat_number">(Vui lòng nhập ID WeChat)</string>
+    <string name="hint_we_chat_number">Vui lòng nhập ID WeChat)</string>
     <string name="zalo">Zalo</string>
-    <string name="hint_zalo">(Vui lòng nhập tài khoản Zalo)</string>
+    <string name="hint_zalo">Vui lòng nhập tài khoản Zalo)</string>
     <string name="error_zalo">lỗi định dạng tài khoản Zalo không hợp lệ</string>
     <string name="facebook">Facebook</string>
-    <string name="hint_facebook">(Vui lòng nhập tài khoản Facebook)</string>
+    <string name="hint_facebook">Vui lòng nhập tài khoản Facebook)</string>
     <string name="error_facebook">lỗi định dạng tài khoản Facebook không hợp lệ</string>
     <string name="whats_app">WhatsApp</string>
-    <string name="hint_whats_app">(Vui lòng nhập tài khoản WhatsApp)</string>
+    <string name="hint_whats_app">Vui lòng nhập tài khoản WhatsApp)</string>
     <string name="error_whats_app">lỗi định dạng tài khoản Whatsapp không hợp lệ</string>
     <string name="telegram">Telegram</string>
-    <string name="hint_telegram">(Vui lòng nhập tài khoản Telegram)</string>
+    <string name="hint_telegram">Vui lòng nhập tài khoản Telegram)</string>
     <string name="error_telegram">lỗi định dạng tài khoản Telegram không hợp lệ</string>
     <string name="security_pb">Câu hỏi an toàn</string>
     <string name="security_answer">Câu trả lời</string>
-    <string name="hint_security_answer">(Hãy nhập câu trả lời)</string>
+    <string name="hint_security_answer">Hãy nhập câu trả lời)</string>
     <string name="real_name">Họ tên thật</string>
     <string name="income_source">Source Of Income</string>
     <string name="identity_type">Valid ID Type</string>
     <string name="betting_shop">Outlet</string>
     <string name="register_identity">Valid ID</string>
-    <string name="hint_register_identity">(Please enter Valid ID)</string>
+    <string name="hint_register_identity">Please enter Valid ID)</string>
     <string name="birth_date">Ngày sinh nhật</string>
-    <string name="hint_birth_date">(YYYY/MM/DD)</string>
-    <string name="hint_real_name">(Họ tên phải đồng nhất với tài khoản ngân hàng)</string>
+    <string name="hint_birth_date">YYYY/MM/DD)</string>
+    <string name="hint_real_name">Họ tên phải đồng nhất với tài khoản ngân hàng)</string>
     <string name="verification_code">Mã xác nhận</string>
     <string name="verification_code_by_sms">Mã xác nhận SMS</string>
     <string name="error_verification_code">Đăng ký mã xác nhận không đúng</string>
-    <string name="hint_verification_code_by_sms">(SMS)</string>
+    <string name="hint_verification_code_by_sms">SMS)</string>
     <string name="error_verification_code_by_sms">SMS mã xác nhận không đúng</string>
     <string name="get_verification_code">Gửi</string>
     <string name="get_valid_code_fail_point">yêu cầu nhận mã xác nhận thất bại, vui lòng nhấp để thử lại !</string>
@@ -344,7 +344,7 @@
     <string name="game_match">Trận đấu</string>
     <string name="play_type">Cách đặt cược</string>
     <string name="game_odds">tỷ lệ kèo</string>
-    <string name="match_names">(Đội chủ nhà) %s vs %s (Đội khách)</string>
+    <string name="match_names">Đội chủ nhà) %s vs %s (Đội khách)</string>
     <string name="match_names_3">Đội chủ nhà %s V.S %s Đội khách</string>
     <string name="bet_item">Mục đặt cược</string>
     <string name="match_type_row_in_play">Trong trận</string>
@@ -556,7 +556,7 @@
     <string name="bet_info_win_quota">Số tiền có thể thắng</string>
     <string name="bet_info_odd_content_changed">Tỷ lệ cược của một hoặc nhiều lựa chọn, điểm chấp hoặc điểm số đã được thay đổi</string>
     <string name="bet_info_odd_content_changed2">Tỷ lệ cược đã thay đổi</string>
-    <string name="bet_list_single_warn">(Có thể sử dụng cùng số tiền đặt cược để thực hiện tất cả các lựa chọn riêng lẻ)</string>
+    <string name="bet_list_single_warn">Có thể sử dụng cùng số tiền đặt cược để thực hiện tất cả các lựa chọn riêng lẻ)</string>
     <string name="bet_list_single">Đơn cược</string>
     <string name="bet_list_single_type">Cược đơn</string>
     <string name="bet_list_parlay_type">Cược xâu</string>
@@ -906,10 +906,10 @@
     <string name="identity_other_name">Bí danh</string>
     <string name="identity_country">quốc gia / khu vực</string>
     <string name="identity_sex">Giới tính</string>
-    <string name="not_verify">(Chưa được xác minh)</string>
-    <string name="passed">(Đang xác minh)</string>
-    <string name="verifying">(Xác minh không thành công)</string>
-    <string name="verify_failed">(Xác minh không thành công)</string>
+    <string name="not_verify">Chưa được xác minh)</string>
+    <string name="passed">Đang xác minh)</string>
+    <string name="verifying">Xác minh không thành công)</string>
+    <string name="verify_failed">Xác minh không thành công)</string>
     <string name="select_id_type">Chọn loại ID</string>
     <string name="scan_tool_bar">Quét kết quả</string>
     <string name="text_us_east_time">• Thời gian được báo cáo theo múi giờ UTC-4</string>
@@ -972,8 +972,8 @@
     <string name="self_limit_froze_impotent_6">Sau khi quá trình tự loại trừ hết hạn, tài khoản của bạn sẽ tự động được kích hoạt lại.</string>
     <string name="text_chose_language">Chọn ngôn ngữ của bạn</string>
     <!-- 複式串關詳情 -->
-    <string name="password_hint">(Vui lòng nhập mật khẩu đăng nhập của bạn)</string>
-    <string name="account_hint">(Vui lòng nhập tài khoản hội viên của bạn)</string>
+    <string name="password_hint">Vui lòng nhập mật khẩu đăng nhập của bạn)</string>
+    <string name="account_hint">Vui lòng nhập tài khoản hội viên của bạn)</string>
     <string name="submit_success">gửi thành công</string>
     <!-- 搜尋 -->
     <string name="text_search">Tìm kiếm</string>
@@ -1178,8 +1178,8 @@
     <string name="kyc_add">Add</string>
 
 
-    <string name="hint_select_document_type">(Mời nhập loại giấy tờ)</string>
-    <string name="hint_select_document_number">(Mời nhập mã số giấy tờ)</string>
+    <string name="hint_select_document_type">Mời nhập loại giấy tờ)</string>
+    <string name="hint_select_document_number">Mời nhập mã số giấy tờ)</string>
     <string name="identity_number">Số giấy tờ</string>
     <string name="identity_two_number">Số giấy tờ2</string>
     <string name="identity_two_type">Loại giấy tờ 2</string>
