--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -381,7 +381,7 @@
     <string name="title_address">地址：</string>
     <string name="title_deposit_money">存款金额</string>
     <string name="title_payer">账号</string>
-    <string name="edt_hint_deposit_money">限额 %1$s %2$s～%3$s</string>
+    <string name="edt_hint_deposit_money">%1$s 限额%2$s～%3$s</string>
     <string name="edt_hint_payer">请输入您的账号</string>
     <string name="title_real_name">认证姓名</string>
     <string name="title_nick_name">个人昵称</string>
