--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -614,7 +614,7 @@
     <string name="feedback_detail">Feedback details</string>
     <string name="feedback_tabName_problem">Suggestions</string>
     <string name="feedback_tabName_record">Feedback history</string>
-    <string name="feedback_description">If you have a good suggestion for the game or platform or find a Bug to submit, the official customer service will reply within 48 hours. We will timely fix bugs or refer to your feedback to continuously optimize our products and services. (If there are many people who give feedback on the same suggestion or Bug, the bonus will be given to the first person who gives feedback. Remember to give feedback as soon as you find any problem.)</string>
+    <string name="feedback_description">If you have a good suggestion for the game or platform or find a Bug to submit, the official customer service will reply within 48 hours. We will timely fix bugs or refer to your feedback to continuously optimize our products and services. (If there are many people who give feedback on the same suggestion or Bug, the bonus will be given to the first person who gives feedback. Remember to give feedback as soon as you find any problem.</string>
     <string name="feedback_description_money">If the suggestion is adopted or the Bug is verified, the maximum reward is %1$s 3000 (or other equivalent currency).</string>
     <string name="feedback_submit_succeed">Feedback submitted successfully</string>
     <string name="all_status">All Status</string>
@@ -862,7 +862,7 @@
     <string name="passport">Passport</string>
     <string name="face_scan_result">face scan result</string>
     <string name="not_verify">Not yet verified</string>
-    <string name="passed">Passed)</string>
+    <string name="passed">Passed</string>
     <string name="verifying">Verifying</string>
     <string name="verify_failed">Verify failed</string>
     <string name="select_id_type">Select ID Type</string>
@@ -1233,7 +1233,7 @@
     <string name="payment_method">Payment method</string>
     <string name="select_file">Select file</string>
     <string name="error_recommend_agent">No matched</string>
-    <string name="login_welcome">Hi，Welcome to OKbet~</string>
+    <string name="login_welcome">Hi,Welcome to OKbet~</string>
     <string name="betting">Betting</string>
     <string name="other_bet">Other Betting History</string>
     <string name="sport_match">Matches</string>
