--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -254,7 +254,7 @@
     <string name="fourth_session">第四节</string>
     <string name="add_time_first_half_game">加时赛上半场</string>
     <string name="add_time_second_half_game">加时赛下半场</string>
-    <string name="account_balance">账户余额</string>
+    <string name="account_balance">总资产</string>
     <string name="user_id_colon">用戶ID：</string>
     <string name="recharge">存款</string>
     <string name="account_transfer">额度转换</string>
@@ -652,7 +652,7 @@
     <string name="my_favorite">赛事收藏</string>
     <string name="other_bet_record">其他投注记录</string>
     <string name="all_plat_type">全部平台类型</string>
-    <string name="visit_first">來去逛逛</string>
+    <string name="visit_first">来去逛逛</string>
     <string name="bet_number">注数</string>
     <string name="bet_money">下注金額</string>
     <string name="profit_and_loss">盈亏</string>
@@ -871,10 +871,10 @@
     <string name="passport">Passport</string>
     <string name="face_scan_result">脸部扫描结果</string>
     <string name="verify_failed_please_retry">验证失败 请重新再试</string>
-    <string name="not_verify">未验证)</string>
-    <string name="passed">已通过)</string>
-    <string name="verifying">验证中)</string>
-    <string name="verify_failed">验证失败)</string>
+    <string name="not_verify">未验证</string>
+    <string name="passed">已通过</string>
+    <string name="verifying">验证中</string>
+    <string name="verify_failed">验证失败</string>
     <string name="select_id_type">选择身份证件类型</string>
     <string name="scan_tool_bar">扫描结果</string>
     <string name="text_us_east_time">• 以美东 (UTC-4) 时间计算</string>
@@ -912,7 +912,7 @@
 
     <!--自我禁制-->
     <string name="e_address">详细地址</string>
-    <string name="hint_e_address">请输入联系地址)</string>
+    <string name="hint_e_address">请输入联系地址</string>
     <string name="initial_withdrawal_needs_credited">初次提款需入账：%1$s %2$s</string>
     <string name="make_sure_valid_account">初次提款会暂时扣留 %1$s %2$s，以确保您是有效账户。此款项于 30 天后会返还。</string>
     <!--登入手機驗證-->
@@ -941,8 +941,8 @@
     <string name="self_limit_froze_impotent_6">在自我禁制到期后，您的账号将自动恢复激活。</string>
     <string name="text_chose_language">请选择您的语言</string>
     <!-- 複式串關詳情 -->
-    <string name="password_hint">请输入您的登录密码)</string>
-    <string name="account_hint">请输入您的会员帐号)</string>
+    <string name="password_hint">请输入您的登录密码</string>
+    <string name="account_hint">请输入您的会员帐号</string>
     <string name="submit_success">提交成功</string>
     <!-- 搜尋 -->
     <string name="text_search">搜索赛事</string>
@@ -1191,8 +1191,8 @@
     <string name="kyc_add">添加</string>
 
     <string name="next_step">下一步</string>
-    <string name="hint_select_document_type">请选择证件类型)</string>
-    <string name="hint_select_document_number">请填写证件号码)</string>
+    <string name="hint_select_document_type">请选择证件类型</string>
+    <string name="hint_select_document_number">请填写证件号码</string>
     <string name="identity_number">证件号码</string>
     <string name="identity_two_number">证件2号码</string>
     <string name="identity_two_type">证件2类型</string>
