--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -533,6 +533,7 @@
     <string name="delete_e_wallet">xóa bỏ</string>
     <string name="select_currency_protocol">Chọn thỏa thuận / Loại tiền</string>
     <string name="error_withdraw_password">Mật khẩu bạn nhập không đúng</string>
+    <string name="error_withdraw_password_for_new">Mật khẩu phải kết hợp 4 chữ số</string> <!--J170-->
     <string name="error_wallet_address">Địa chỉ bạn đăng nhập không hợp lệ</string>
     <string name="text_bank_card_delete_success">Đã xóa thẻ ngân hàng thành công</string>
     <string name="text_e_wallet_delete_success">Đã xóa eWallet thành công</string>
