[Fix] OK-1218【OKBET-UI-Android-Bet Slip】VNM - BetSlip Unsettled Page distorted text on amount (金额上的文字扭曲)

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -125,7 +125,7 @@
     <string name="bet_info_input_quota">ใส่จำนวนเงิน</string>
     <string name="bet_info_all_bet">เดิมพันทั้งหมด</string>
     <string name="bet_receipt_all_bet">เดิมพันทั้งหมด</string>
-    <string name="bet_info_list_win_quota">จำนวนที่ชนะได้</string>
+    <string name="bet_info_list_win_quota">จำนวนที่ชนะได้：</string>
     <string name="keyboard_max">ใหญ่สุด</string>
     <string name="bet_info_list_bet">เดิมพัน</string>
     <string name="edt_hint_deposit_money">%1$s จำกัด%2$s～%3$s</string>
