OK-998 【OKBET-UI改版-Android-我的】網點預約頁面，不符設計稿

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1240,4 +1240,5 @@
     <string name="sport_match">Matches</string>
     <string name="remove_account_warning">Are you sure you want to cancel your current account?</string>
     <string name="register_and_login">Sign Up/Login</string>
+    <string name="km">Km</string>
 </resources>
