--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1272,4 +1272,5 @@
     <string name="hint_confirm_withdrawal_password">请确认提款密码</string>
     <string name="text_security_money3"><font color='#025BE8'>%1$s</font> 日后解冻</string>
     <string name="hint_please_enter_the_password_again">请再次输入密码</string>
+    <string name="km">Km</string>
 </resources>
