OK-994 投注站点选中修改

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -1187,5 +1187,6 @@
     <string name="register_and_login">ลงทะเบียน/เข้าสู่ระบบ</string>
     <string name="km">กิโลเมตร</string>
     <string name="league_filter">คัดเลือกเหตุการณ์</string>
+    <string name="outlet">เดิมพัน</string>
     <!--F005-->
 </resources>
