--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1230,4 +1230,5 @@
     <string name="register_and_login">Đăng ký/Đăng nhập</string>
     <string name="km">Km</string>
     <string name="league_filter">Lọc trận đấu</string>
+    <string name="outlet">Trạm cược</string>
 </resources>
