--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1241,4 +1241,5 @@
     <string name="remove_account_warning">Are you sure you want to cancel your current account?</string>
     <string name="register_and_login">Sign Up/Login</string>
     <string name="km">Km</string>
+    <string name="outlet">Outlet</string>
 </resources>
